--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+aiofiles==23.2.1 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:19297512c647d4b27a2cf7c34caa7e405c0d60b5560618a29a9fe027b18b0107 \
+    --hash=sha256:84ec2218d8419404abcb9f0c02df3f34c6e0a68ed41072acfb1cef5cbc29051a
 brotli==1.1.0 ; python_version >= "3.10" and python_version < "4.0" and implementation_name == "cpython" \
     --hash=sha256:03d20af184290887bdea3f0f78c4f737d126c74dc2f3ccadf07e54ceca3bf208 \
     --hash=sha256:0541e747cce78e24ea12d69176f6a7ddb690e62c425e01d31cc065e69ce55b48 \
